# gh-link-auditor

./: .env.example  .gitignore  .unleashed.json  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  check_links.py  hitl_console.py  pyproject.toml  run.py
.claude/: project.json  settings.json
.github/: FUNDING.yml
.github/workflows/: lint.yml  test.yml
data/: session-index.jsonl
data/config/: blocklist.yaml  bot_config.yaml  targets.yaml
docs/: 00003-file-inventory.md  lessons-learned.md
docs/lineage/: workflow-audit.jsonl
docs/lld/: lld-status.json
docs/runbooks/: bulk-scan-kickoff.md  operator-guide.md
docs/session-logs/: 2026-02-19.md  2026-03-06.md  2026-03-07.md  2026-03-18.md  2026-05-12.md  2026-05-13.md
docs/standards/: 00006-cli-argument-parser.md  00007-anti-bot-backoff.md  00008-json-report-schema.md
ideas/done/: 20-cheery-littlebottom-link-detective.md  21-mr-slant-link-judge.md  22-langgraph-pipeline-and-campaign-dashboard.md
src/: logging_config.py
src/docfix_bot/: __init__.py  config.py  git_workflow.py  link_scanner.py  models.py  pr_generator.py  scheduler.py  state_store.py  target_manager.py  url_validator.py
src/gh_link_auditor/: __init__.py  archive_client.py  auth.py  campaign_dashboard.py  classic_pat.py  false_positives.py  github_api.py  github_resolver.py  hostile_classifier.py  link_detective.py  models.py  network.py  policy_checker.py  pr_tracker.py  redirect_resolver.py  repo_quality.py  similarity.py  sitemap_searcher.py  (+3 more)
tests/: conftest.py
tools/: add_test_workflow.py  smoke_bulk_inventory.py
(+401 files in other folders)
