[project]
name = "gh-link-auditor"
version = "0.1.0"
description = "Enterprise-grade link auditor with Human-in-the-Loop resolution"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]

[tool.poetry.dependencies]
pydantic = "^2.12.5"
