[project]
name = "gh-link-auditor"
version = "0.1.0"
description = "Enterprise-grade link auditor with Human-in-the-Loop resolution"
requires-python = ">=3.10,<4.0"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
addopts = "--import-mode=importlib"

[tool.poetry.dependencies]
pydantic = "^2.12.5"
langgraph = "^1.0.8"
rich = "^14.3.2"
prompt-toolkit = "^3.0.52"
httpx = "^0.28.1"
tiktoken = "^0.12.0"
pyyaml = "^6.0.3"
tinydb = "^4.8.2"
gitpython = "^3.1.46"
